# AudioSpeedHack

./: .gitignore  .gitmodules  .taplo.toml  Cargo.toml  LICENSE  README-en.md  README.md  ds_test.py  flake.nix  test.py  xmake.lua
.github/workflows/: release.yml  test.yaml
adtest/: Cargo.toml
adtest/src/: main.rs
audiospeedhackcli/: Cargo.toml
audiospeedhackcli/src/: main.rs
speedhacklib/: Cargo.toml
speedhacklib/src/: lib.rs  utils.rs
src/: asset.rs  audioapiinfo.cpp  audioapiinjector.cpp  audiospeedhack.cpp  cache.rs  cli.rs  constant.rs  device.rs  device_info.rs  injection.cpp  injection.h  injector.cpp  log.rs  main.rs  process_utils.cpp  process_utils.h  reg.rs  shared_memory.cpp  shared_memory.h  speedhackinjector.cpp  tui.rs  tui_selection.cpp  tui_selection.h  utils.rs
