[package]
authors     = ["lxl66566 <lxl66566@gmail.com>"]
categories  = ["command-line-utilities", "games", "multimedia::audio"]
description = "SPEED UP audio in galgames."
edition     = "2024"
keywords    = ["audio", "speed", "speedup", "dsound"]
license     = "MIT"
name        = "AudioSpeedHack"
readme      = "README.md"
repository  = "https://github.com/lxl66566/AudioSpeedHack"
version     = "0.2.1"

[dependencies]
anyhow               = "1.0.75"
clap                 = { version = "4.5", features = ["derive"] }
config-file2         = "0.4.1"
cpal                 = "0.16"
goblin               = "0.10.3"
include_assets       = { version = "1.0.0", default-features = false, features = ["zstd"] }
log                  = "0.4.28"
pitch_shift          = "1.0.0"
pretty_env_logger    = "0.5.0"
ringbuf              = "0.3"
serde                = "1.0.228"
strum                = "0.27"
strum_macros         = "0.27"
terminal-menu        = "3.1.0"
windows_registry_obj = "0.1.0"

[patch.crates-io]
pitch_shift = { path = "./pitch_shift" }

[profile.release]
lto       = true
opt-level = "z"
panic     = "abort"
strip     = true
