[package]
edition = "2021"
name    = "speedhacklib"
version = "0.1.0"

[dependencies]
retour = { version = "0.3.1", features = ["static-detour"] }

[target."cfg(windows)".dependencies.windows]
features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemServices",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_UI_WindowsAndMessaging",
]
version = "0.58.0"

[lib]
crate-type = ["cdylib"]
name       = "speedhacklib"
