[package]
edition = "2021"
name = "speedhacklib"
version = "0.1.0"

[dependencies]
retour = { git = "https://github.com/Hpmason/retour-rs", features = [
  "static-detour",
] }

[target."cfg(windows)".dependencies.windows]
features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemServices",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Media_Audio",
]
version = "0.61.1"

[lib]
crate-type = ["cdylib"]
name = "speedhacklib"
